# trex

./: .gitignore  Cargo.toml  README.md  cargo-bazel-lock.json
cli/: BUILD.bazel  Cargo.toml
cli/src/: main.rs
parser/: BUILD.bazel  Cargo.toml
parser/src/: error.rs  lib.rs  parser.rs  rendering.rs
parser/src/compiler/: mod.rs
parser/src/rendering/: block.rs  mod.rs  style.rs
