[package]
name = "trex"
version = "0.1.0"
edition = "2021"
author = "Francis Fortier <francis.fortier@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trex-parser = { path = "../parser" }
clap = { version ="4.1.11", features = ["derive"] }
termion = "2.0.1"
