load("@crate_index_trex//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//trex:__subpackages__"])

rust_library(
    name = "parser",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "trex_parser",
    deps = all_crate_deps(),
)

rust_test(
    name = "unit_test",
    crate = ":parser",
    deps = all_crate_deps(
        normal_dev = True,
    ),
)
